Refactoring
Signed-off-by: Arjan Tijms <arjan.tijms@gmail.com>